--- a/sfg-pet-clinic-web/src/main/resources/templates/owner/index.html
+++ b/sfg-pet-clinic-web/src/main/resources/templates/owner/index.html
@@ -5,5 +5,21 @@
 	</head>
 	<body>
 		<h1 th:text="'List of Owners'">Owners</h1> <!-- put single quotes for text, otherwise throw error -->
+		<table>
+			<thead>
+				<tr>
+					<th>Id</th>
+					<th>First Name</th>
+					<th>Last Name</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr th:each="owner:${owners}">
+					<td th:text="${owner.id}">1</td>
+					<td th:text="${owner.firstName}">gaurav</td>
+					<td th:text="${owner.lastName}">singh</td>
+				</tr>
+			</tbody>
+		</table>
 	</body>
 </html>
