--- a/sfg-pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/sfg-pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -1,25 +1,53 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-	<head>
-		<title>Spring Pet Clinic - Vets</title>
-	</head>
-	<body>
-		<h1 th:text="'List of Vets'">Vets</h1> <!-- put single quotes for text, otherwise throw error -->
-		<table>
-			<thead>
-				<tr>
-					<th>Id</th>
-					<th>First Name</th>
-					<th>Last Name</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr th:each="vet:${vets}">
-					<td th:text="${vet.id}">1</td>
-					<td th:text="${vet.firstName}">gaurav</td>
-					<td th:text="${vet.lastName}">singh</td>
-				</tr>
-			</tbody>
-		</table>
-	</body>
+
+<html xmlns:th="https://www.thymeleaf.org"
+      th:replace="~{fragments/layout :: layout (~{::body},'vets')}">
+
+<body>
+
+<h2>Veterinarians</h2>
+
+<table id="vets" class="table table-striped">
+  <thead>
+  <tr>
+    <th>Name</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr th:each="vet : ${vets}">
+    <td th:text="${vet.firstName + ' ' + vet.lastName}"></td>
+  </tr>
+  </tbody>
+</table>
+
+<div th:if="${totalPages > 1}">
+  <span>Pages:</span>
+  <span>[</span>
+  <span th:each="i: ${#numbers.sequence(1, totalPages)}">
+      <a th:if="${currentPage != i}" th:href="@{'/vets.html?page=__${i}__'}">[[${i}]]</a>
+      <span th:unless="${currentPage != i}">[[${i}]]</span>
+    </span>
+  <span>]&nbsp;</span>
+  <span>
+      <a th:if="${currentPage > 1}" th:href="@{'/vets.html?page=1'}" title="First"
+         class="fa fa-fast-backward"></a>
+      <span th:unless="${currentPage > 1}" title="First" class="fa fa-fast-backward"></span>
+    </span>
+  <span>
+      <a th:if="${currentPage > 1}" th:href="@{'/vets.html?page=__${currentPage - 1}__'}" title="Previous"
+         class="fa fa-step-backward"></a>
+      <span th:unless="${currentPage > 1}" title="Previous" class="fa fa-step-backward"></span>
+    </span>
+  <span>
+      <a th:if="${currentPage < totalPages}" th:href="@{'/vets.html?page=__${currentPage + 1}__'}" title="Next"
+         class="fa fa-step-forward"></a>
+      <span th:unless="${currentPage < totalPages}" title="Next" class="fa fa-step-forward"></span>
+    </span>
+  <span>
+      <a th:if="${currentPage < totalPages}" th:href="@{'/vets.html?page=__${totalPages}__'}" title="Last"
+         class="fa fa-fast-forward"></a>
+      <span th:unless="${currentPage < totalPages}" title="Last" class="fa fa-fast-forward"></span>
+    </span>
+</div>
+</body>
 </html>
