--- a/sfg-pet-clinic-web/src/main/resources/templates/owner/ownerDetails.html
+++ b/sfg-pet-clinic-web/src/main/resources/templates/owner/ownerDetails.html
@@ -37,7 +37,7 @@
     <br />
     <br />
     <h2>Pets and Visits</h2>
-  <!--
+  
     <table class="table table-striped">
   
       <tr th:each="pet : ${owner.pets}">
@@ -47,9 +47,9 @@
             <dd th:text="${pet.name}"></dd>
             <dt>Birth Date</dt>
             <dd
-              th:text="${#temporals.format(pet.birthDate, 'yyyy-MM-dd')}"></dd>
+              th:text="${#temporals.format(pet.dateOfBirth, 'yyyy-MM-dd')}"></dd>
             <dt>Type</dt>
-            <dd th:text="${pet.type}"></dd>
+            <dd th:text="${pet.petType}"></dd>
           </dl>
         </td>
         <td valign="top">
@@ -73,7 +73,7 @@
       </tr>
   
     </table>
-  -->
+
   </body>
 
 </html>
