--- a/sfg-pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/sfg-pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -11,11 +11,15 @@
   <thead>
   <tr>
     <th>Name</th>
+    <th>Specialities</th>
   </tr>
   </thead>
   <tbody>
   <tr th:each="vet : ${vets}">
     <td th:text="${vet.firstName + ' ' + vet.lastName}"></td>
+  	<td><span th:each="specialty : ${vet.specialities}"
+                  th:text="${specialty.description + ' '}" /> <span
+                th:if="${vet?.specialities?.size() == 0}">none</span></td>
   </tr>
   </tbody>
 </table>
